--- a/index.html
+++ b/index.html
@@ -30,5 +30,27 @@
             </div>
                 
         </header>
+
+        <main>
+            <section class="teams display-flex">
+                <div class="team-img-container">
+                    <img src="images/team1.png" alt="">
+                    <img src="images/team2.png" alt="">
+                    <img src="images/team3.png" alt="">
+                    <img src="images/team4.png" alt="">
+                </div>
+                <div class="our-features">
+                    <h3 class="feature-title">
+                        <span id="quick">Quick list</span> of Our <span id="fea">Features</span> 
+                    </h3>
+                    <p class="feature-description text-light-gray">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    </p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
+            </section>
+
+            
+        </main>
 </body>
 </html>
