--- a/index.html
+++ b/index.html
@@ -50,7 +50,90 @@
                 </div>
             </section>
 
-            
+            <section class="features">
+                <div class="features-love">
+                    <h3 id="line" class="section-title">Features you will  <br>love & enjoy</h3>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                    <div class="task">
+                        <h3 class="task-title">Desktop & Mobile Version</h3>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="task">
+                        <h3 class="task-title">Drag & Drop Builder</h3>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="task">
+                        <h3 class="task-title">Awesome Modern Design</h3>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="task">
+                        <h3 class="task-title">Super Easy to Edit</h3>
+                        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+                <div>
+                    <img class="archi-img" src="images/architect.png" alt="">
+                    <button class="btn-sec">
+                        <span id="year">10+Year</span> <br>
+                        <span id="exp">Experience</span>
+                    </button>
+                </div>
+            </section>
+
+
+            <section>
+                <h3 class="section-title">Some Facts</h3>
+                <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+                <div class="facts-container">
+                    <div class="fact-card display-flex">
+                        <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
+                    </div>
+                    <div class="fact-card display-flex">
+                        <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
+                    </div>
+                    <div class="fact-card display-flex">
+                        <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                    </div>
+                    <div class="fact-card display-flex">
+                        <div>
+
+                    
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <div class="spon">
+                    <h3 class="section-title">Our Sponspors</h3>
+                    <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur cum suscipit aperiam id quibusdam eligendi quis commodi in laboriosam voluptas?</p>
+                </div>
+                <div class="spon-logos">
+                    <img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
+                    <img src="images/sponsors/google.png" alt="">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                </div>
+            </section>
+
         </main>
 </body>
 </html>
