--- a/index.html
+++ b/index.html
@@ -133,7 +133,17 @@
                     <img src="images/sponsors/telerama.png" alt="">
                 </div>
             </section>
+            <section>
 
+            </section>
         </main>
+
+        <footer>
+            <div class="footerwork">
+                <p class="foot">All rights reserved copyright@2023 startup landing page design</p>
+                
+            </div>
+            
+        </footer>
 </body>
 </html>
